# poseidon-circuit

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain
benches/: hash.rs  synthesis.rs
poseidon-base/: Cargo.toml
poseidon-base/src/: hash.rs  lib.rs  params.rs  primitives.rs
poseidon-base/src/primitives/: grain.rs  mds.rs  p128pow5t3.rs  p128pow5t3_compact.rs
poseidon-base/src/primitives/bn256/: fp.rs  mod.rs
poseidon-base/src/primitives/pasta/: fp.rs  mod.rs
poseidon-circuit/: Cargo.toml
poseidon-circuit/benches/: hash.rs
poseidon-circuit/src/: hash.rs  lib.rs  poseidon.rs
poseidon-circuit/src/poseidon/: pow5.rs
poseidon-circuit/src/poseidon/septidon/: control.rs  full_round.rs  instruction.rs  params.rs  septidon_chip.rs  state.rs
poseidon-circuit/tests/: hash_proving.rs
spec/: hash-table.md
src/: hash.rs  lib.rs  poseidon.rs  septidon.rs
src/hash/: stable_group_by.rs
src/poseidon/: pow5.rs  primitives.rs  septidon.rs
src/poseidon/primitives/: fields.rs  grain.rs  mds.rs  p128pow5t3.rs  p128pow5t3_compact.rs
src/poseidon/primitives/bn256/: fp.rs  mod.rs
src/poseidon/primitives/pasta/: fp.rs  mod.rs  pallas.rs
src/poseidon/septidon/: control.rs  full_round.rs  instruction.rs  loop_chip.rs  params.rs  septidon_chip.rs  septuple_round.rs  state.rs  tests.rs  transition_round.rs  util.rs
src/septidon/: README.md  control.rs  full_round.rs  instruction.rs  params.rs  septidon_chip.rs  septuple_round.rs  state.rs  tests.rs  transition_round.rs
tests/: hash_proving.rs
