[package]
name = "poseidon-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
lazy_static = "1.4.0"
thiserror = "1.0"
bitvec = "1"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "halo2-ecc-snark-verifier-0220" }

# remove once 
# https://github.com/privacy-scaling-explorations/poseidon/pull/7
# https://github.com/privacy-scaling-explorations/halo2curves/pull/31
# are merged
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "halo2-ecc-snark-verifier-0220" }

[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "halo2-ecc-snark-verifier-0220" }

[features]
# printout the layout of circuits for demo and some unittests
# print_layout = ["halo2_proofs/dev-graph"]

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3.0"
plotters = "0.3"
bencher = "0.1"
subtle = "2"

[[bench]]
name = "hash"
harness = false

[profile.test]
opt-level = 3
debug-assertions = true
