[workspace]
members = [
    "poseidon-circuit",
    "poseidon-base"
]
resolver = "2"

[workspace.dependencies]
bencher = "0.1"
bitvec = "1"
ff = "0.13"
halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
lazy_static = "1.4"
log = "0.4"
plotters = "0.3"
rand = "0.8"
rand_chacha = "0.3.0"
rand_xorshift = "0.3"
subtle = "2"
thiserror = "1.0"

[profile.test]
opt-level = 3
debug-assertions = true

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
