[package]
name = "poseidon-base"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static.workspace = true
bitvec.workspace = true
halo2curves.workspace = true
subtle.workspace = true
sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0720", optional = true }
sp1-lib-upstream = { package = "sp1-lib", git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1", optional = true }

[features]
short = []
zkvm-hint = []
zkvm-hint-scroll = ["sp1-lib"]
zkvm-hint-upstream = ["sp1-lib-upstream"]